fix spacing in prompts

--- a/assets/CSS/style_0.2.scss
+++ b/assets/CSS/style_0.2.scss
@@ -89,7 +89,7 @@ section {
     border-radius: 10px;
 
     p {
-      margin-left: 27.34px;
+      display: flex;
       padding: 13px;
     }
 
@@ -97,8 +97,8 @@ section {
       content: "\f0eb";
       color: $tip-prompt-icon-color;
       font: var(--fa-font-solid);
-      padding: 15px;
-      margin-left: -41.34px;
+      padding-right: 13px;
+      padding-top: 5px;
     }
   }
 
@@ -107,7 +107,7 @@ section {
     border-radius: 10px;
 
     p {
-      margin-left: 32.13px;
+      display: flex;
       padding: 13px;
     }
 
@@ -115,8 +115,8 @@ section {
       content: "\f05a";
       color: $info-prompt-icon-color;
       font: var(--fa-font-solid);
-      padding: 15px;
-      margin-left: -45.13px;
+      padding-right: 13px;
+      padding-top: 5px;
     }
   }
 
@@ -125,7 +125,7 @@ section {
     border-radius: 10px;
 
     p {
-      margin-left: 32.13px;
+      display: flex;
       padding: 13px;
     }
 
@@ -133,8 +133,8 @@ section {
       content: "\f06a";
       color: $warning-prompt-icon-color;
       font: var(--fa-font-solid);
-      padding: 15px;
-      margin-left: -45.13px;
+      padding-right: 13px;
+      padding-top: 5px;
     }
   }
 
@@ -143,7 +143,7 @@ section {
     border-radius: 10px;
 
     p {
-      margin-left: 32.13px;
+      display: flex;
       padding: 13px;
     }
 
@@ -151,8 +151,8 @@ section {
       content: "\f071";
       color: $danger-prompt-icon-color;
       font: var(--fa-font-solid);
-      padding: 15px;
-      margin-left: -45.13px;
+      padding-right: 13px;
+      padding-top: 5px;
     }
   }
 
